# minimalist-presentation-mcp

./: .env.example  .env.live.example  .gitignore  Dockerfile  Makefile  README.md  azure_app.py  compose.yaml  main.py  pyproject.toml  requirements.txt
docs/: 2026-05-16-codex-chatgpt-auth-mcp.md  architecture.md  azure_app_service_deploy.md  concept.md  demo_script.md  foundry_agent.md  live_azure_setup.md  live_test.md  message_kernel.md  zenn_article_outline.md
example/: __init__.py
example/communication_compiler/: __init__.py  config.py  main.py  models.py  storage.py
example/communication_compiler/agent/: __init__.py  base.py  foundry_agent.py  mock_agent.py
example/communication_compiler/services/: brief.py  deck_payload.py  evidence.py  guardrails.py  idea_map.py  mcp_client.py  speech.py
example/communication_compiler/static/: app.js  index.html  styles.css
fixtures/evidence/: ai_adoption_2026_q1.json
infra/foundry-live/: create_agent.py  main.bicep  main.json
issues/: 00_index.md  01_architecture_decision.md  02_backend_session_api.md  03_foundry_agent_orchestration.md  04_free_talk_and_claim_candidates.md  05_four_line_message_kernel.md  06_evidence_grounding.md  07_mcp_deck_generation.md  08_distributable_brief.md  09_idea_map_ui.md  10_web_ui.md  11_evaluation_and_safety.md  12_demo_and_docs.md
roadmaps/: 2026-05-18-example-communication-compiler.md  2026-05-18-mcp-communication-compiler.md
src/minimalist_presentation_mcp/: __init__.py  cli.py  config.py
tests/: conftest.py  test_azure_app.py  test_deck_pipeline.py  test_example_app.py  test_http_app.py
(+18 files in other folders)
