[project]
name = "minimalist-presentation-mcp"
version = "0.1.0"
description = "HTTP Streamable MCP server for fixed-format Message-First Deck presentations"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "mcp[cli]>=1.27.0",
    "pydantic>=2.13.3",
    "pytest>=9.0.3",
    "pyyaml>=6.0.3",
    "ulid-py>=1.1.0",
    "uvicorn>=0.46.0",
]

[project.scripts]
minimalist-presentation-mcp = "minimalist_presentation_mcp.cli:main"

[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
